ContractConfigurator (UNRELEASED)
- Support for disabling other contract types
- Support for contract level notes.
- Support for using TextGen generated descriptions.
- Added Timer parameter.
- Various minor bug-fixes.

ContractConfigurator 0.2.0
- Added VesselParameterGroup parameter (supports grouping Vessel parameters, tracking duration, tracking non-active vessels, works across docking/undocking/decoupling).
- Created new versions of all the stock parameters dealing with Vessels to add support for tracking non-active vessels.
- Added HasCrew parameter.
- Added HasResource parameter
- Added HasPart parameter.
- Added HasPartModule parameter.
- Added PartModuleUnlocked requirement.
- Added VesselHasVisited parameter.
- Added ReturnHome parameter.
- Added Sequence and SequenceNode parameters.
- Various minor bug-fixes

ContractConfigurator 0.1.0
- Initial release.