@@ -99,4 +99,54 @@ CONTRACT_TYPE
             minQuantity = 100.0
         }
     }
+
+    PARAMETER
+    {
+        name = OriginAndDestination
+        type = VesselParameterGroup
+
+        PARAMETER
+        {
+            name = Origin
+            type = All
+            disableOnStateChange = false
+
+            PARAMETER
+            {
+                name = DestSit
+                type = ReachSituation
+                situation = PRELAUNCH
+            }
+
+            PARAMETER
+            {
+                name = DestBiome
+                type = ReachBiome
+                biome = Shores
+            }
+        }
+
+        PARAMETER
+        {
+            name = Destination
+            type = All
+            disableOnStateChange = false
+
+            PARAMETER
+            {
+                name = DestSit
+                type = ReachSituation
+                situation = FLYING
+                disableOnStateChange = false
+            }
+
+            PARAMETER
+            {
+                name = DestBiome
+                type = ReachBiome
+                biome = Water
+                disableOnStateChange = false
+            }
+        }
+    }
 }
